fix height on mobile

--- a/src/app/homescreen/events/event-card/events-event-card.component.scss
+++ b/src/app/homescreen/events/event-card/events-event-card.component.scss
@@ -126,6 +126,7 @@
 
 .event-progress-bar {
 	height: 5px;
+  border-radius: 0;
 }
 
 .progress-bar {
