--- a/src/app/homescreen/events/events.component.scss
+++ b/src/app/homescreen/events/events.component.scss
@@ -21,7 +21,6 @@
 	}
 
 	& .nav {
-		display: flex;
 		gap: 24px;
 		width: max-content;
 	}
@@ -34,10 +33,6 @@
 
 	& .nav-item a.active {
 		color: var(--primary-color);
-		// border-bottom: 2px solid var(--primary-color);
-		// box-shadow:
-    //   0 1px 0 0 var(--primary-color),
-    //   0 -1px 0 2px white;
 	}
 
   & .active-tab-indicator {
@@ -56,7 +51,7 @@
 	transition: margin 280ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
 }
 
-@media (max-width: 575.98px) { 
+@media (max-width: 767.98px) { 
 	.tabs {
 		// position: sticky;
 		// top: 0;
@@ -65,7 +60,14 @@
 		// padding: 0 12px;
 	
 		& .nav {
-			margin: 0 auto;
+      flex-wrap: nowrap;
+      width: auto;
 		}
+
+    & .nav-item {
+      flex-grow: 1;
+      text-align: center;
+      white-space: nowrap;
+    }
 	}
 }
